# taAssignment

./: README.md
assets/: index.html  login.html
backend/: Cargo.toml
backend/src/: applicants.rs  components.rs  main.rs  parsers.rs  reducer.rs  renderer.rs  router.rs
client/: README.md  package.json  post_css_options.json  postcss.config.js  webpack.config.js
client/css/: form.css  main.css
client/js/: applicant_form.js  login.js  nav_bar.js  profile_page.js  taAssignment.js  ta_coord.js
client/js/actions/: coordinatorActions.js  index.js  payload.js
client/js/applicant_form/components/: button_area.js  confirmation.js  other.js  personal.js  school.js  success.js
client/js/applicant_info/components/: ApplicantTable.js  ApplicantsInfoCard.js  ApplicationContextMenu.js  ApplicationContextMenuItem.js  FilterBox.js  TableHeader.js
client/js/applicant_info/containers/: ApplicantTableContainer.js  ApplicantsInfoCardContainer.js  FilterBoxContainer.js
client/js/dispatchers/: bool_switch.js  change_content.js  error_message.js
client/js/global/: constants.js  normalize.js
client/js/helpers/: create_store.js  middleware.js
client/js/navigation/components/: NavigationCard.js  NavigationMasterlist.js  NavigationSublist.js  course_level_list.js  course_list.js
client/js/navigation/containers/: NavigationCardContainer.js  NavigationMasterlistContainer.js  NavigationSublistContainer.js
client/js/reducers/: bool.js  payload.js  reducer_active_filter.js  reducer_filter.js  reducer_table.js  route.js  taCoordinatorReducers.js
